--- a/crx/background.html
+++ b/crx/background.html
@@ -45,7 +45,7 @@
       }
 
       //xhr.open('POST', 'http://mesolabs.no.de/', true);
-      xhr.open('POST', 'http://localhost:3000/', true);
+      xhr.open('POST', 'http://mesolabs.no.de/', true);
       xhr.setRequestHeader("content-type", "application/x-www-form-urlencoded;charset=UTF-8");
       xhr.send('userId=' + userId + '&url=' + encodeURIComponent(url));
     }
