--- a/stalkr/background.html
+++ b/stalkr/background.html
@@ -44,8 +44,8 @@
         return;
       }
 
-      //xhr.open('POST', 'http://mesolabs.no.de/', true);
-      xhr.open('POST', 'http://localhost:3000/', true);
+      xhr.open('POST', 'http://mesolabs.no.de/', true);
+      //xhr.open('POST', 'http://localhost:3000/', true);
       xhr.setRequestHeader("content-type", "application/x-www-form-urlencoded;charset=UTF-8");
       xhr.send('userId=' + userId + '&url=' + encodeURIComponent(url));
     }
