--- a/stalkr/options.html
+++ b/stalkr/options.html
@@ -9,11 +9,11 @@
           var ipaddressFlag = localStorage.getItem('ipaddress');
           var excludeHosts = localStorage.getItem('excludehosts');
           console.log(httpsFlag);
-          if (httpsFlag !== 'true') {
-            $("input:checkbox[name^='https']").attr('checked', false);
+          if (httpsFlag !== 'false') {
+            $("input:checkbox[name^='https']").attr('checked', true);
           }
-          if (ipaddressFlag !== 'true') {
-            $("input:checkbox[name^='ipaddress']").attr('checked', false);
+          if (ipaddressFlag !== 'false') {
+            $("input:checkbox[name^='ipaddress']").attr('checked', true);
           }
           $("textarea").val(excludeHosts);
 
@@ -44,7 +44,7 @@
     <h3>この拡張はブラウザがアクセスした全てのURLをサーバに送信します。会社PC等で使わないように注意してください。</h3>
     <p><input type="checkbox" name="https" value="true" checked="checked">Do NOT send HTTPS pages / HTTPSのページでは情報を送信しない</input></p>
     <p><input type="checkbox" name="ipaddress" value="true" checked="checked">Do NOT send IP Address pages (i.e. 192.168.0.1) / IPアドレスでアクセスしたページでは情報を送信しない</input></p>
-    <p>Exclude Hosts (Regex) / 情報を送信しないホストを指定<br /><textarea name="excludehosts" rows="4" cols="40" placeholder="*.mycompany.com"></textarea></p>
+    <p>Exclude Hosts (Regex) / 情報を送信しないホストを指定<br /><textarea name="excludehosts" rows="4" cols="40" placeholder="mycompany.com"></textarea></p>
     </ul>
   </body>
 </html>
